config-files/kustomize/Tenant/openshift/openshift-tenant-5-0-9.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    name: my-route
    namespace: default
  spec:
    host: my-route-default.apps-crc.testing
    port:
      targetPort: https-console
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: passthrough
    to:
      kind: Service
      name: cesar-console
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
